syntax = "proto3";

service CompareAndSwapService {
  rpc CompareAndSwap (CompareAndSwapRequest) returns (CompareAndSwapReply);
}

message CompareAndSwapRequest {
	int32 slot = 1;
	int32 leader = 2;
}

message CompareAndSwapReply {
	int32 leader = 1;
}